// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressNavigation should only show the chevrons when the user is more than 2 addresses away from the last unused address 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -79,11 +79,13 @@
            "flexShrink": 1,
            "gap": 4,
            "justifyContent": "center",
          },
          false,
-         false,
+         Object {
+           "paddingLeft": 24,
+         },
        ]
      }
    >
      <TextInput
        onChangeText={[Function onChangeText]}
@@ -96,11 +98,11 @@
            "lineHeight": 32.5,
            "overflow": "hidden",
            "textAlign": "center",
          }
        }
-       value="address #6"
+       value="address #4"
      />
      <View
        accessibilityState={
          Object {
            "busy": undefined,
@@ -156,10 +158,57 @@
          "gap": 2,
          "justifyContent": "flex-end",
        }
      }
    >
+     <View
+       accessibilityState={
+         Object {
+           "busy": undefined,
+           "checked": undefined,
+           "disabled": undefined,
+           "expanded": undefined,
+           "selected": undefined,
+         }
+       }
+       accessibilityValue={
+         Object {
+           "max": undefined,
+           "min": undefined,
+           "now": undefined,
+           "text": undefined,
+         }
+       }
+       accessible={true}
+       collapsable={false}
+       focusable={true}
+       onClick={[Function onClick]}
+       onResponderGrant={[Function onResponderGrant]}
+       onResponderMove={[Function onResponderMove]}
+       onResponderRelease={[Function onResponderRelease]}
+       onResponderTerminate={[Function onResponderTerminate]}
+       onResponderTerminationRequest={[Function onResponderTerminationRequest]}
+       onStartShouldSetResponder={[Function onStartShouldSetResponder]}
+       style={
+         Object {
+           "opacity": 1,
+         }
+       }
+     >
+       <test-file-stub
+         fill="#F56522"
+         style={
+           Array [
+             Object {
+               "height": 24,
+               "width": 24,
+             },
+             undefined,
+           ]
+         }
+       />
+     </View>
      <View
        accessibilityState={
          Object {
            "busy": undefined,
            "checked": undefined,"
`;

exports[`AddressNavigation should only show the chevrons when the user is more than 2 addresses away from the last unused address 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -23,10 +23,57 @@
      <View
        accessibilityState={
          Object {
            "busy": undefined,
            "checked": undefined,
+           "disabled": undefined,
+           "expanded": undefined,
+           "selected": undefined,
+         }
+       }
+       accessibilityValue={
+         Object {
+           "max": undefined,
+           "min": undefined,
+           "now": undefined,
+           "text": undefined,
+         }
+       }
+       accessible={true}
+       collapsable={false}
+       focusable={true}
+       onClick={[Function onClick]}
+       onResponderGrant={[Function onResponderGrant]}
+       onResponderMove={[Function onResponderMove]}
+       onResponderRelease={[Function onResponderRelease]}
+       onResponderTerminate={[Function onResponderTerminate]}
+       onResponderTerminationRequest={[Function onResponderTerminationRequest]}
+       onStartShouldSetResponder={[Function onStartShouldSetResponder]}
+       style={
+         Object {
+           "opacity": 1,
+         }
+       }
+     >
+       <test-file-stub
+         fill="#F56522"
+         style={
+           Array [
+             Object {
+               "height": 24,
+               "width": 24,
+             },
+             undefined,
+           ]
+         }
+       />
+     </View>
+     <View
+       accessibilityState={
+         Object {
+           "busy": undefined,
+           "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
@@ -77,13 +124,15 @@
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "gap": 4,
            "justifyContent": "center",
+         },
+         Object {
+           "paddingRight": 24,
          },
          false,
-         false,
        ]
      }
    >
      <TextInput
        onChangeText={[Function onChangeText]}
@@ -96,11 +145,11 @@
            "lineHeight": 32.5,
            "overflow": "hidden",
            "textAlign": "center",
          }
        }
-       value="address #6"
+       value="address #8"
      />
      <View
        accessibilityState={
          Object {
            "busy": undefined,"
`;

exports[`AddressNavigation should render correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "stretch",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingLeft": 4,
      "paddingRight": 4,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 2,
        "justifyContent": "flex-end",
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <test-file-stub
        fill="#7D675E"
        style={
          [
            {
              "height": 24,
              "width": 24,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexBasis": "0%",
          "flexDirection": "row",
          "flexGrow": 1,
          "flexShrink": 1,
          "gap": 4,
          "justifyContent": "center",
        },
        false,
        false,
      ]
    }
  >
    <TextInput
      onChangeText={[Function]}
      style={
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 20,
          "letterSpacing": 0.2,
          "lineHeight": 32.5,
          "overflow": "hidden",
          "textAlign": "center",
        }
      }
      value="address #2"
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <test-file-stub
        fill="#F56522"
        style={
          [
            {
              "height": 16,
              "width": 16,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 2,
        "justifyContent": "flex-end",
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <test-file-stub
        fill="#F56522"
        style={
          [
            {
              "height": 24,
              "width": 24,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
</View>
`;
